--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img id="img1" src="" >
             <div class="container">
               <h4 id="recipe-title1">John Doe</h4>
-              <p id="cat1" ></p>
+             <p id="cat1" ></p>
               <button type="button" id="btn-1" class="btn btn-outline-dark recipe-btn">View Recipe</button>
             </div>
         </div>
@@ -48,21 +48,20 @@
             <img id="img4" src="" >
             <div class="container">
               <h4 id="recipe-title4">Jane</h4>
-
               <button type="button" id="btn-4" class="btn btn-outline-dark recipe-btn">View Recipe</button>
             </div>
         </div>
         <div class="card">
             <img id="img5" src="" >
             <div class="container">
-              <h4 id="recipe-title5">Jackson</h4>
-              <button type="button" id="btn-5" class="btn btn-outline-dark recipe-btn">View Recipe</button>
+]              <h4 id="recipe-title5">Jackson</h4>
+            <button type="button" id="btn-5" class="btn btn-outline-dark recipe-btn">View Recipe</button>
             </div>
         </div>
         <div class="card">
             <img id="img6" src="" >
             <div class="container">
-              <h4 id="recipe-title6"> Jerry</h4>
+                <h4 id="recipe-title6"> Jerry</h4>
               <button type="button" id="btn-6" class="btn btn-outline-dark recipe-btn">View Recipe</button>
             </div>
         </div>
@@ -79,7 +78,7 @@
 
 <div>
     <button type="button" id="back-btn">Back</button>
-    <h1 class="title">Placeholder</h1>
+    <h1 id="2-page-title">Placeholder</h1>
     <ul id="ingredients">Ingredients:</ul>
     <div id="instructions">
         <h1>Instructions</h1>
