--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
 </div>
 <h1 style="width: 600px;">MORE OPTIONS</h1>
 
+<!-- <embed type="video/webm" width="400" height="300" id="video">
+  <iframe id="video" type="text/html" width="640" height="390" src="" frameborder="0"></iframe> -->
+
+  
 
 </div>
      
