trying to get spotify api

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="page-1">
     <header>
-        <h1 >RECIPESSSSSSSS</h1>
+        <h1 >THE COZY KITCHEN</h1>
         <h5>If your looking for a new recipe, click below</h5>
         <button id="random-Btn" type="button" class="btn btn-primary btn-lg">Click me w/ ur hungry ass</button>
         
